# surety-ui

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  release.yml  test.yml
requirements/: common.txt  test.txt
surety/ui/: browser.py  elements.py  indexed_db.py  local_storage.py  pytest_addons.py  screenshots.py
tests/: conftest.py  test_browser.py  test_folder.py  test_indexed_db.py  test_local_storage.py  test_page.py  test_screenshots.py  test_singleton.py
tests/addons/: test_compare_artifacts.py  test_console.py  test_save_screenshot.py
tests/elements/: conftest.py  test_button.py  test_checkbox.py  test_element.py  test_elements.py  test_input.py  test_label.py  test_link.py  test_select.py  test_table.py
